# pymq-demo

./: LICENSE  README.md  pyproject.toml  requirements.txt
pymq_demo/: receive.py  send.py  simple.json
